@@ -34,6 +34,7 @@ ChangeLog
 [-] * Properly detect if phone does not support AT+MODE (bug#1019).
 [-] * Disable AT/Obex for Motorola E790 (bug#1018).
 [+] * Add option to filter messages by SMSC (bug#1020).
+[-] * Implement retries when waiting for message prompt.
     
 20091012 - 1.26.90
 
